mkl/src/imports/cblas/CBLAS.cs


        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sgbmv(BlasLayout Layout, BlasTrans TransA, int M, int N, int KL, int KU, 
            float alpha, ref float A, int lda, ref float X, int incX, float beta, ref float Y, int incY);
        
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_strmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref float A, int lda,
                        ref float X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_stbmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, int K, ref float A, int lda,
                        ref float X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_stpmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref float Ap, ref float X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_strsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref float A, int lda, ref float X,
                        int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_stbsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, int K, ref float A, int lda,
                        ref float X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_stpsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref float Ap, ref float X, int incX);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dgbmv(BlasLayout Layout,
                        BlasTrans TransA, int M, int N,
                        int KL, int KU, double alpha,
                        ref double A, int lda, ref double X,
                        int incX, double beta, ref double Y, int incY);
        
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtrmv(BlasLayout Layout, BlasUpLo Uplo, BlasTrans TransA, BlasDiagonal Diag, 
            int N, ref double A, int lda, ref double X, int incX);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtbmv(BlasLayout Layout, BlasUpLo Uplo, BlasTrans TransA, BlasDiagonal Diag,
                int N, int K, ref double A, int lda, ref double X, int incX);
        
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtpmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref double Ap, ref double X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtrsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref double A, int lda, ref double X,
                        int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtbsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, int K, ref double A, int lda,
                        ref double X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dtpsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref double Ap, ref double X, int incX);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_cgbmv(BlasLayout Layout,
                        BlasTrans TransA, int M, int N,
                        int KL, int KU, ref byte alpha,
                        ref byte A, int lda, ref byte X,
                        int incX, ref byte beta, ref byte Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctrmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref byte A, int lda,
                        ref byte X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctbmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, int K, ref byte A, int lda,
                        ref byte X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctpmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref byte Ap, ref byte X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctrsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref byte A, int lda, ref byte X,
                        int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctbsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, int K, ref byte A, int lda,
                        ref byte X, int incX);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ctpsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref byte Ap, ref byte X, int incX);


        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_zgbmv(BlasLayout Layout,
                        BlasTrans TransA, int M, int N,
                        int KL, int KU, ref byte alpha,
                        ref byte A, int lda, ref byte X,
                        int incX, ref byte beta, ref byte Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztrmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref byte A, int lda,
                        ref byte X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztbmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, int K, ref byte A, int lda,
                        ref byte X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztpmv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref byte Ap, ref byte X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztrsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref byte A, int lda, ref byte X,
                        int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztbsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, int K, ref byte A, int lda,
                        ref byte X, int incX);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ztpsv(BlasLayout Layout, BlasUpLo Uplo,
                        BlasTrans TransA, BlasDiagonal Diag,
                        int N, ref byte Ap, ref byte X, int incX);


        /*
        * Routines with S and D prefixes only
        */
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ssymv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, float alpha, ref float A,
                        int lda, ref float X, int incX,
                        float beta, ref float Y, int incY);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ssbmv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, int K, float alpha, ref float A,
                        int lda, ref float X, int incX,
                        float beta, ref float Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sspmv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, float alpha, ref float Ap,
                        ref float X, int incX,
                        float beta, ref float Y, int incY);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sger(BlasLayout Layout, int M, int N,
                        float alpha, ref float X, int incX,
                        ref float Y, int incY, ref float A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ssyr(BlasLayout Layout, BlasUpLo Uplo,
                        int N, float alpha, ref float X,
                        int incX, ref float A, int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sspr(BlasLayout Layout, BlasUpLo Uplo,
                        int N, float alpha, ref float X,
                        int incX, ref float Ap);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_ssyr2(BlasLayout Layout, BlasUpLo Uplo,
                        int N, float alpha, ref float X,
                        int incX, ref float Y, int incY, ref float A,
                        int lda);
        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_sspr2(BlasLayout Layout, BlasUpLo Uplo,
                        int N, float alpha, ref float X,
                        int incX, ref float Y, int incY, ref float A);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dsymv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, double alpha, ref double A,
                        int lda, ref double X, int incX,
                        double beta, ref double Y, int incY);

        [DllImport(CBlasDll, CallingConvention=Cdecl, ExactSpelling=true)]
        public static extern void cblas_dsbmv(BlasLayout Layout, BlasUpLo Uplo,
                        int N, int K, double alpha, ref double A,
                        int lda, ref double X, int incX,
                        double beta, ref double Y, int incY);
